# panopticon-docs

./: .gitignore  Makefile  README.md  docker-compose.yml  package.json
api/: .gitignore  Dockerfile  Gemfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/app/controllers/: application_controller.rb
api/app/controllers/v1/: projects_controller.rb  task_providers_controller.rb  tasks_controller.rb
api/app/entities/: README.md  github_issue.rb  github_issue_list.rb
api/app/models/: project.rb  task.rb  task_provider.rb  task_status_history.rb
api/app/repositories/: README.md  github_repository.rb
api/app/views/: projects_get.json.jb  task_providers_get.json.jb  task_providers_post.json.jb  tasks_get.json.jb  tasks_task_id_get.json.jb
api/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
api/db/: Schemafile  projects.schema  samples.schema  seeds.rb  task_providers.schema  task_status_histories.schema  tasks.schema
api/docker/metabase/sql/: count_by_dates.sql
api/docker/openapi/: index.yaml  merged.yaml
api/docker/openapi/components/: index.yaml
api/docker/openapi/info/: index.yaml
api/docker/openapi/paths/: index.yaml  (+7 more)
api/docker/swagger-merger/: watch.js
api/spec/: README.md  rails_helper.rb
api/spec/factories/: projects.rb  task_providers.rb  tasks.rb
api/spec/models/: project_spec.rb  sample_spec.rb  task_provider_spec.rb  task_spec.rb  task_status_history_spec.rb
api/spec/requests/: projects_spec.rb  task_providers_spec.rb  tasks_spec.rb
api/src/app/: sample.py
api/src/tests/: test_sample.py
(+80 files in other folders)
